# pyanist

./: .gitignore  README.md  chord_generator.py  chord_matcher.py  chords.py  custom-typing-test.txt  logo.xcf  phonetic_spelling_test.py  pyproject.toml  test_chord_generator.py  test_match_words_with_chords.py  word-freq-top5000.csv
.github/workflows/: ci.yml
dictionaries/: english-us.json
docs/: all_chords.csv  lesson_1.txt  lesson_10.txt  lesson_2.txt  lesson_3.txt  lesson_4.txt  lesson_5.txt  lesson_6.txt  lesson_7.txt  lesson_8.txt  lesson_9.txt
pyanist/: chords.py  cli.py  generate_chord_list_csv.py  generate_monkeytype_course.py  phonetic_spelling_test.py  test_match_words_with_chords.py
word-frequency-lists/: word-freq-top5000.csv
