[tool.poetry]
name = "chorded-typing"
version = "0.1.0"
description = ""
authors = ["Dániel Kántor <git@daniel-kantor.com>"]

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
