[tool.poetry]
name = "chorded-typing"
version = "0.1.0"
description = ""
authors = ["Dániel Kántor <git@daniel-kantor.com>"]

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
frozendict = "^2.3.4"
tqdm = "^4.64.1"
snakeviz = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
