[tool.poetry]
name = "pyanist"
version = "0.1.3"
description = "Pyanist allows using chorded typing in addition to normal typing in order to improve your typing speed"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
readme = "README.md"

[tool.poetry.scripts]
pyanist = 'pyanist.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
frozendict = "^2.3.4"
tqdm = "^4.64.1"
snakeviz = "^2.1.1"
phonemizer = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
